# solana-chat-app

./: README.md  package-lock.json  package.json
program/: Cargo.toml
src/components/: DestChatAddressView.tsx
src/solana/: program.ts
