
[package]
name = "solana-chat-app"
version = "0.0.1"
description = "This chat app is for Vadim"
authors = ["Wasif Shah"]
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.6"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "chatappprogram"
crate-type = ["cdylib", "lib"]
